# cpp-labs-2-spring

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CompileOptions.cmake
extras/: CMakeLists.txt
extras/cli11/: CMakeLists.txt
extras/googletest/: CMakeLists.txt
extras/nlohmann-json/: CMakeLists.txt
extras/rapidcsv/: CMakeLists.txt
src/libcsc/: CMakeLists.txt
src/libcsc/libcsc/: CMakeLists.txt
src/libcsc/libcsc/forward_list/: ForwardIterator.hpp  ForwardList.hpp
src/libcsc/libcsc/smartptr/: SharedPtr.hpp  UniquePtr.hpp
src/libcsc/libcsc/soundex/: soundex.cpp  soundex.hpp
src/libcsc/libcsc/time/: time.hpp
src/soundex_groupby/soundex_groupby/: CMakeLists.txt  main.cpp
tests/libcsc/: CMakeLists.txt
tests/libcsc/libcsc/: forward_list.cpp  smartptr.cpp  soundex.cpp  time.cpp
